# HMF

./: README.md  hmf.cabal  stack.yaml
src/: Ast.hs  Infer.hs  Lib.hs  State.hs  Type.hs
src/Algw/: Ast.hs  Env.hs  Infer.hs  Type.hs
src/BP/: Ast.hs  Env.hs  Infer.hs  Type.hs
src/FCP/: Ast.hs  Env.hs  Infer.hs  Type.hs
src/Ranked/: Ast.hs  Env.hs  Infer.hs  Type.hs
test/: InferSpec.hs  TypeSpec.hs
test/Algw/: InferSpec.hs
test/BP/: InferSpec.hs
test/FCP/: InferSpec.hs  TypeSpec.hs
test/Ranked/: InferSpec.hs  TypeSpec.hs
