name:                hmf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hmf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ast
                     , Type
                     , State
                     , Infer
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , pretty
  default-language:    Haskell2010

executable hmf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmf
  default-language:    Haskell2010

test-suite hmf-test
  type:                exitcode-stdio-1.0
  other-modules:       TypeSpec
                     , InferSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmf
                     , hspec >= 1.3
                     , QuickCheck
                     , pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hmf
