name:                hmf
version:             0.1.0.0
homepage:            https://github.com/zjhmale/HMF
license:             BSD3
license-file:        LICENSE
author:              zjhmale
copyright:           2016 zjhmale
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ranked.Ast
                     , Ranked.Type
                     , Ranked.Infer
                     , Ranked.Env
                     , FCP.Ast
                     , FCP.Type
                     , FCP.Infer
                     , FCP.Env
                     , State
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty
                     , monad-loops
  default-language:    Haskell2010

executable hmf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmf
  default-language:    Haskell2010

test-suite hmf-test
  type:                exitcode-stdio-1.0
  other-modules:       Ranked.TypeSpec
                     , Ranked.InferSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmf
                     , hspec >= 1.3
                     , QuickCheck
                     , containers
                     , pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/HMF
